[tool.poetry]
name = "dadel"
version = "0.0.0"
description = "Fully featured dagster project"
authors = ["Jasper Ginn"]
readme = "README.md"
packages = [{include = "dadel", from="src"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
requests = "^2.31.0"
appengine-python-standard = "^1.1.5"
pandas = "^2.1.3"
matplotlib = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.group.dagster.dependencies]
dagster = "^1.5.7"
dagit = "^1.5.7"
dagster-gcp = "^0.21.7"

[tool.poetry.group.dbt.dependencies]
dbt = "^1.0.0.35.1"
dbt-postgres = "^1.7.4"

[tool.dagster]
module_name = "dadel"

[tool.poetry-git-version-plugin]
alpha_version_format = '{version}a{distance}+{commit_hash}'
version_format = '{version}'

[tool.black]
line-length = 100
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
  )
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "^tests/"
ignore_missing_imports = true

[tool.ruff]
ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  "docs",
  "site",
  "src/dagster_orchestrators/__init__.py",
]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
